# clawkson

./: .env.vectorchord.example  AGENTS.md  Cargo.toml  docker-compose.yml  flake.nix  openapi.yml
apps/web/: package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: Button.module.css  Button.tsx  Card.module.css  Card.tsx  EmptyState.module.css  EmptyState.tsx  Layout.module.css  Layout.tsx  PageHeader.module.css  PageHeader.tsx  Sidebar.module.css  Sidebar.tsx  StatusBadge.module.css  StatusBadge.tsx
apps/web/src/lib/: api.ts
apps/web/src/pages/: Agents.module.css  Agents.tsx  Connectors.module.css  Connectors.tsx  Conversations.module.css  Conversations.tsx  Dashboard.module.css  Dashboard.tsx  Docs.module.css  Docs.tsx  KnowledgeBase.module.css  KnowledgeBase.tsx  Settings.module.css  Settings.tsx  Tools.module.css  Tools.tsx
crates/api/: Cargo.toml
crates/api/src/: lib.rs  llm.rs  main.rs  state.rs
crates/api/src/routes/: agents.rs  connectors.rs  conversations.rs  knowledge.rs  llm_connectors.rs  mod.rs  settings.rs  tools.rs
crates/core/: Cargo.toml
crates/core/src/: models.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_init.sql  0002_chat.sql
crates/db/src/: bootstrap.rs  config.rs  conversation.rs  lib.rs  message.rs  migrate.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: README.md  agents.md  api.md  architecture.md  connectors.md  getting-started.md  vectorchord.md
