[package]
name = "clawkson-api"
version.workspace = true
edition.workspace = true

[dependencies]
clawkson-core = { path = "../core" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
