[package]
name = "clawkson-api"
version.workspace = true
edition.workspace = true

[dependencies]
clawkson-core = { path = "../core" }
clawkson-db = { path = "../db" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
reqwest.workspace = true
futures.workspace = true
tokio-stream.workspace = true
async-stream = "0.3"
denkwerk = { path = "../../../denkwerk" }
