[package]
name = "clawkson-server"
version.workspace = true
edition.workspace = true

[dependencies]
clawkson-api = { path = "../api" }
clawkson-db = { path = "../db" }
axum.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
